deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: quarkus-app
    app.kubernetes.io/component: web
    app.kubernetes.io/instance: quarkus-app
    app.kubernetes.io/name: quarkus-app
    app.kubernetes.io/part-of: quarkus-app
    app.openshift.io/runtime: java
  name: quarkus-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quarkus-app
  template:
    metadata:
      labels:
        app: quarkus-app
    spec:
      containers:
      - image: quay.io/idey/quarkus-app:latest
        imagePullPolicy: Always
        name: quarkus-app 
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: petclinic-event-listener
  name: el-petclinic-event-listener
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-petclinic-event-listener
    weight: 100
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: quarkus-app
  name: quarkus-app
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: quarkus-app
    weight: 100
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: quarkus-app 
  name: quarkus-app 
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  - name: 8778-tcp
    port: 8778
    protocol: TCP
    targetPort: 8778
  selector:
    app: spring-petclinic
  sessionAffinity: None
  type: ClusterIP
